--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
           </ul>
         </nav>
         <ul class="menu-contact list">
-          <li class="list-link"><svg class="icon-contacts" width="16" height="12">
-                <use href="./images/sprite.svg#icon-mail"></use></svg>
+          <li class="list-link">
             <a
               class="contact-mail link"
               href="mailto:info@devstudio.com"
               lang="en"
-              >info@devstudio.com</a>
+              ><svg class="icon-contacts" width="16" height="12">
+                <use href="./images/sprite.svg#icon-mail"></use></svg>info@devstudio.com</a>
           </li>
-          <li class="list-link"><svg class="icon-contacts" width="10" height="16">
-                <use href="./images/sprite.svg#icon-phone"></use></svg>
+          <li class="list-link">
             <a class="contact-phone link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+              ><svg class="icon-contacts" width="10" height="16">
+                <use href="./images/sprite.svg#icon-phone"></use></svg>+38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -155,49 +155,48 @@
           <h2 class="team-title">Наша команда</h2>
           <ul class="team-humans">
             <li class="team-list">
-              <img
-                src="./images/human1.jpg"
-                alt="Ігор Дем'яненко"
-                width="270"
-              />
+              <img src="./images/human1.jpg" alt="Игор Дем'яненко" width="270" />
               <div class="team-content">
-                <h3 class="team-item">Ігор Дем'яненко</h3>
-                <p lang="en" class="team-item-text">Product Designer</p>
+                <h3 class="team-item">Игор Дем'яненко</h3>
+                <p lang="en" class="team-item-text">Frontend Developer</p>
                 <ul class="social-list">
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg
-                        aria-label="іконка інстаграму"
-                        class="social-list-icon"
-                      >
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      <svg class="social-list-icon">
+                        <use
+                          aria-label="іконка інстаграму"
+                          href="./images/sprite.svg#icon-instagram"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg aria-label="іконка твітеру" class="social-list-icon">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      <svg class="social-list-icon">
+                        <use
+                          aria-label="іконка твітеру"
+                          href="./images/sprite.svg#icon-twitter"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg
-                        aria-label="іконка фейсбуку"
-                        class="social-list-icon"
-                      >
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      <svg class="social-list-icon">
+                        <use
+                          aria-label="іконка фейсбуку"
+                          href="./images/sprite.svg#icon-facebook"
+                        ></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg
-                        aria-label="іконка лінкеніну"
-                        class="social-list-icon"
-                      >
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      <svg class="social-list-icon">
+                        <use
+                          aria-label="іконка лінкеніну"
+                          href="./images/sprite.svg#icon-linkedin"
+                        ></use>
                       </svg>
                     </a>
                   </li>
@@ -407,8 +406,8 @@
     </main>
     <!-- Footer -->
     <footer class="footer" id="contact">
-      <div class="container">
-        <a class="footer-logo" href="./index.html"
+      <div class="container footer-box">
+        <div><a class="footer-logo" href="./index.html"
           ><span class="web-logo">Web</span>Studio</a
         >
         <address class="adress">
