--- a/portfolio.html
+++ b/portfolio.html
@@ -41,22 +41,17 @@
         </nav>
         <ul class="menu-contact list">
           <li class="list-link">
-            <svg class="icon-contacts" width="16" height="12">
-              <use href="./images/sprite.svg#icon-mail"></use>
-            </svg>
             <a
               class="contact-mail link"
               href="mailto:info@devstudio.com"
               lang="en"
-              >info@devstudio.com</a
-            >
+              ><svg class="icon-contacts" width="16" height="12">
+                <use href="./images/sprite.svg#icon-mail"></use></svg>info@devstudio.com</a>
           </li>
           <li class="list-link">
-            <svg class="icon-contacts" width="10" height="16">
-              <use href="./images/sprite.svg#icon-phone"></use>
-            </svg>
             <a class="contact-phone link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+              ><svg class="icon-contacts" width="10" height="16">
+                <use href="./images/sprite.svg#icon-phone"></use></svg>+38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -207,14 +202,15 @@
         </div>
       </section>
     </main>
+    <!-- Footer -->
     <footer class="footer" id="contact">
-      <div class="container">
-        <a class="footer-logo" href="./index.html"
+      <div class="container footer-box">
+        <div><a class="footer-logo" href="./index.html"
           ><span class="web-logo">Web</span>Studio</a
         >
         <address class="adress">
           <ul>
-            <li class="adress-mao">
+            <li class="adress-map">
               <a
                 href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
                 target="_blank"
@@ -235,6 +231,34 @@
           </ul>
         </address>
       </div>
+      <div class="social-web-content">
+          <p class="text-tagline">Приєднуйтесь</p>
+          <ul class="footer-social-web">
+            <li class="footer-social-web-item">
+              <a href="#" class="footer-social-web-link"
+                ><svg class="icon-footer" width="20" height="20">
+                  <use
+                    href="./images/sprite.svg#icon-instagram"></use></svg></a>
+            </li>
+            <li class="footer-social-web-item">
+              <a href="#" class="footer-social-web-link"
+                ><svg class="icon-footer" width="20" height="20">
+                  <use href="./images/sprite.svg#icon-twitter"></use></svg></a>
+            </li>
+            <li class="footer-social-web-item">
+              <a href="#" class="footer-social-web-link"
+                ><svg class="icon-footer" width="20" height="20">
+                  <use
+                    href="./images/sprite.svg#icon-facebook"></use></svg></a>
+            </li>
+            <li class="footer-social-web-item">
+              <a href="#" class="footer-social-web-link"
+                ><svg class="icon-footer" width="20" height="20">
+                  <use
+                    href="./images/sprite.svg#icon-linkedin"></use></svg></a>
+            </li>
+          </ul>
+        </div>
     </footer>
   </body>
 </html>
