--- a/portfolio.html
+++ b/portfolio.html
@@ -46,12 +46,15 @@
               href="mailto:info@devstudio.com"
               lang="en"
               ><svg class="icon-contacts" width="16" height="12">
-                <use href="./images/sprite.svg#icon-mail"></use></svg>info@devstudio.com</a>
+                <use href="./images/sprite.svg#icon-mail"></use></svg
+              >info@devstudio.com</a
+            >
           </li>
           <li class="list-link">
             <a class="contact-phone link" href="tel:+380961111111"
               ><svg class="icon-contacts" width="10" height="16">
-                <use href="./images/sprite.svg#icon-phone"></use></svg>+38 096 111 11 11</a
+                <use href="./images/sprite.svg#icon-phone"></use></svg
+              >+38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -89,114 +92,176 @@
           </ul>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                src="./images/img1.jpg"
-                alt="головна сторінка"
-                width="370"
-                height="294"
-              />
-              <div class="border-down">
-                <h2 class="portfolio-title">Технокряк</h2>
-                <p class="portfolio-text">Веб-сайт</p>
-              </div>
+              <a
+                class="portfolio-item-link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <img
+                  src="./images/img1.jpg"
+                  alt="головна сторінка"
+                  width="370"
+                  height="294"
+                />
+                <div class="border-down">
+                  <h2 class="portfolio-title">Технокряк</h2>
+                  <p class="portfolio-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img2.jpg"
-                alt="гра у баскетбол"
-                width="370"
-                height="294"
-              />
-              <div class="border-down">
-                <h2 class="portfolio-title">
-                  Постер New Orlean vs Golden Star
-                </h2>
-                <p class="portfolio-text">Дизайн</p>
-              </div>
+              <a
+                class="portfolio-item-link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <img
+                  src="./images/img2.jpg"
+                  alt="гра у баскетбол"
+                  width="370"
+                  height="294"
+                />
+                <div class="border-down">
+                  <h2 class="portfolio-title">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p class="portfolio-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img3.jpg"
-                alt="емблема ресторану"
-                width="370"
-                height="294"
-              />
-              <div class="border-down">
-                <h2 class="portfolio-title">Ресторан Seafood</h2>
-                <p class="portfolio-text">Додаток</p>
-              </div>
+              <a
+                class="portfolio-item-link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <img
+                  src="./images/img3.jpg"
+                  alt="емблема ресторану"
+                  width="370"
+                  height="294"
+                />
+                <div class="border-down">
+                  <h2 class="portfolio-title">Ресторан Seafood</h2>
+                  <p class="portfolio-text">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img4.jpg"
-                alt="навушники"
-                width="370"
-                height="294"
-              />
-              <div class="border-down">
-                <h2 class="portfolio-title">Проєкт Prime</h2>
-                <p class="portfolio-text">Маркетинг</p>
-              </div>
+              <a
+                class="portfolio-item-link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <img
+                  src="./images/img4.jpg"
+                  alt="навушники"
+                  width="370"
+                  height="294"
+                />
+                <div class="border-down">
+                  <h2 class="portfolio-title">Проєкт Prime</h2>
+                  <p class="portfolio-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img5.jpg"
-                alt=" дві коробки "
-                width="370"
-                height="294"
-              />
-              <div class="border-down">
-                <h2 class="portfolio-title">Проєкт Boxes</h2>
-                <p class="portfolio-text">Додаток</p>
-              </div>
+              <a
+                class="portfolio-item-link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <img
+                  src="./images/img5.jpg"
+                  alt=" дві коробки "
+                  width="370"
+                  height="294"
+                />
+                <div class="border-down">
+                  <h2 class="portfolio-title">Проєкт Boxes</h2>
+                  <p class="portfolio-text">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img6.jpg"
-                alt="чорний монітор"
-                width="370"
-                height="294"
-              />
-              <div class="border-down">
-                <h2 class="portfolio-title">Inspiration has no Borders</h2>
-                <p class="portfolio-text">Веб-сайт</p>
-              </div>
+              <a
+                class="portfolio-item-link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <img
+                  src="./images/img6.jpg"
+                  alt="чорний монітор"
+                  width="370"
+                  height="294"
+                />
+                <div class="border-down">
+                  <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                  <p class="portfolio-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img7.jpg"
-                alt="відкрита книга"
-                width="370"
-                height="294"
-              />
-              <div class="border-down">
-                <h2 class="portfolio-title">Видання Limited Edition</h2>
-                <p class="portfolio-text">Дизайн</p>
-              </div>
+              <a
+                class="portfolio-item-link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <img
+                  src="./images/img7.jpg"
+                  alt="відкрита книга"
+                  width="370"
+                  height="294"
+                />
+                <div class="border-down">
+                  <h2 class="portfolio-title">Видання Limited Edition</h2>
+                  <p class="portfolio-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img8.jpg"
-                alt="бірка"
-                width="370"
-                height="294"
-              />
-              <div class="border-down">
-                <h2 class="portfolio-title">Проєкт LAB</h2>
-                <p class="portfolio-text">Маркетинг</p>
-              </div>
+              <a
+                class="portfolio-item-link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <img
+                  src="./images/img8.jpg"
+                  alt="бірка"
+                  width="370"
+                  height="294"
+                />
+                <div class="border-down">
+                  <h2 class="portfolio-title">Проєкт LAB</h2>
+                  <p class="portfolio-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img9.jpg"
-                alt="друкує на клавіатурі"
-                width="370"
-                height="294"
-              />
-              <div class="border-down">
-                <h2 class="portfolio-title">Growing Business</h2>
-                <p class="portfolio-text">Додаток</p>
-              </div>
+              <a
+                class="portfolio-item-link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                ><img
+                  src="./images/img9.jpg"
+                  alt="друкує на клавіатурі"
+                  width="370"
+                  height="294"
+                />
+                <div class="border-down">
+                  <h2 class="portfolio-title">Growing Business</h2>
+                  <p class="portfolio-text">Додаток</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -205,60 +270,66 @@
     <!-- Footer -->
     <footer class="footer" id="contact">
       <div class="container footer-box">
-        <div><a class="footer-logo" href="./index.html"
-          ><span class="web-logo">Web</span>Studio</a
-        >
-        <address class="adress">
-          <ul>
-            <li class="adress-map">
-              <a
-                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                ><span class="site">г. Киев, пр-т Леси Украинки, 26</span>
-              </a>
-            </li>
-            <li class="adress-mail">
-              <a class="footer-mail" href="mailto:info@devstudio.com" lang="en"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="adress-phone">
-              <a class="footer-phone" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
-      </div>
-      <div class="social-web-content">
+        <div>
+          <a class="footer-logo" href="./index.html"
+            ><span class="web-logo">Web</span>Studio</a
+          >
+          <address class="adress">
+            <ul>
+              <li class="adress-map">
+                <a
+                  href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  ><span class="site">г. Киев, пр-т Леси Украинки, 26</span>
+                </a>
+              </li>
+              <li class="adress-mail">
+                <a
+                  class="footer-mail"
+                  href="mailto:info@devstudio.com"
+                  lang="en"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="adress-phone">
+                <a class="footer-phone" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="social-web-content">
           <p class="text-tagline">Приєднуйтесь</p>
           <ul class="footer-social-web">
             <li class="footer-social-web-item">
               <a href="#" class="footer-social-web-link"
                 ><svg class="icon-footer" width="20" height="20">
-                  <use
-                    href="./images/sprite.svg#icon-instagram"></use></svg></a>
+                  <use href="./images/sprite.svg#icon-instagram"></use></svg
+              ></a>
             </li>
             <li class="footer-social-web-item">
               <a href="#" class="footer-social-web-link"
                 ><svg class="icon-footer" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-twitter"></use></svg></a>
+                  <use href="./images/sprite.svg#icon-twitter"></use></svg
+              ></a>
             </li>
             <li class="footer-social-web-item">
               <a href="#" class="footer-social-web-link"
                 ><svg class="icon-footer" width="20" height="20">
-                  <use
-                    href="./images/sprite.svg#icon-facebook"></use></svg></a>
+                  <use href="./images/sprite.svg#icon-facebook"></use></svg
+              ></a>
             </li>
             <li class="footer-social-web-item">
               <a href="#" class="footer-social-web-link"
                 ><svg class="icon-footer" width="20" height="20">
-                  <use
-                    href="./images/sprite.svg#icon-linkedin"></use></svg></a>
+                  <use href="./images/sprite.svg#icon-linkedin"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
+      </div>
     </footer>
   </body>
 </html>
